--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -34,7 +34,7 @@
 
 .register-form-section {
   background-color: rgba(255, 255, 255, 0.15);
-  padding: 1.5rem 4rem;
+    padding: 1.2rem 1rem 0.7rem 1rem;
   border-radius: 8px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(12px);
@@ -65,7 +65,7 @@
 .register-input-group input,
 .register-input-group select {
   width: 100%;
-  padding: 0.7rem 1rem;
+  padding: 1.8rem 1rem 0.7rem 1rem;
   border: 1px solid rgba(255, 255, 255, 0.4);
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.08);
@@ -84,9 +84,8 @@
 
 .register-input-group label {
   position: absolute;
-  top: 50%;
+  top: 0.7rem;
   left: 1rem;
-  transform: translateY(-50%);
   font-size: 0.95rem;
   color: white;
   pointer-events: none;
@@ -109,12 +108,17 @@
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13.2-5.4H18.6c-5%200-9.3%201.8-13.2%205.4A17.6%2017.6%200%200%200%200%2082.6c0%204.8%201.8%209.3%205.4%2013.2l128%20128c3.9%203.9%208.4%205.4%2013.2%205.4s9.3-1.8%2013.2-5.4l128-128c3.9-3.9%205.4-8.4%205.4-13.2%200-4.8-1.8-9.3-5.4-13.2z%22%2F%3E%3C%2Fsvg%3E');
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13.2-5.4H18.6c-5%200-9.3%201.8-13.2%205.4A17.6%2017.6%200%200%200%200%2082.6c0%204.8%201.8%209.3%205.4%2013.2l128%20128c3.9%203.9%208.4%205.4%2013.2%205.4s9.3-1.8%2013.2-5.4l128-128c3.9-3.9%205.4-8.4%205.4-13.2%200-4.8-1.8-9.3-5.4-13.2z%22%2F%3E%3C%2Fsvg%3E');
   background-repeat: no-repeat;
   background-position: right 0.7em top 50%, 0 0;
   background-size: 0.65em auto, 100%;
-  color: black;
+  color: white;
   background-color: transparent;
+}
+
+.gender-select option {
+  background-color: #283849; /* Dark background for options */
+  color: #00aaff; /* Blue text for options */
 }
 
 .register-button,
